# AulearningFront/src/api/endpoints.js
@@ -1,0 +1,12 @@
+export const ENDPOINTS = {
+  auth: {
+    login: '/auth/login',
+    me: '/auth/me',
+    logout: '/auth/logout',
+    logoutAll: '/auth/logout-all',
+  },
+
+  dashboard: {
+    admin: '/dashboard/admin',
+  },
+};
